--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "/.cache/*",
     "/node_modules/*"
   ],
+  "resolutions": {
+    "carbon-components": "10.47.1",
+    "carbon-components-react": "7.47.2"
+  },
   "dependencies": {
     "@babel/core": "^7.15.8",
     "@carbon/charts-react": "0.50.8",
