chore: add caret range to resolutions

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "/node_modules/*"
   ],
   "resolutions": {
-    "carbon-components": "10.47.1",
-    "carbon-components-react": "7.47.2"
+    "carbon-components": "^10.47.1",
+    "carbon-components-react": "^7.47.2"
   },
   "dependencies": {
     "@babel/core": "^7.15.8",
