--- a/package.json
+++ b/package.json
@@ -36,6 +36,12 @@
     "/.cache/*",
     "/node_modules/*"
   ],
+  "resolutions": {
+    "@carbon/elements": "^10.47.0-rc.0",
+    "@carbon/icons-react": "^10.43.0-rc.0",
+    "carbon-components": "^10.48.0-rc.0",
+    "carbon-components-react": "^7.48.0-rc.0"
+  },
   "dependencies": {
     "@babel/core": "^7.15.8",
     "@carbon/charts-react": "0.50.8",
