chore(Carbon Website): update to v10.48.0-rc.0

--- a/package.json
+++ b/package.json
@@ -36,20 +36,27 @@
     "/.cache/*",
     "/node_modules/*"
   ],
+  "resolutions": {
+    "@carbon/elements": "^10.47.0-rc.0",
+    "@carbon/icons": "^10.43.0-rc.0",
+    "@carbon/icons-react": "^10.43.0-rc.0",
+    "carbon-components": "^10.48.0-rc.0",
+    "carbon-components-react": "^7.48.0-rc.0"
+  },
   "dependencies": {
     "@babel/core": "^7.15.8",
     "@carbon/charts-react": "0.50.8",
-    "@carbon/elements": "^10.46.0",
-    "@carbon/icons": "^10.42.0",
-    "@carbon/icons-react": "^10.42.0",
+    "@carbon/elements": "^10.47.0-rc.0",
+    "@carbon/icons": "^10.43.0-rc.0",
+    "@carbon/icons-react": "^10.43.0-rc.0",
     "@carbon/pictograms": "^11.20.0",
     "@carbon/pictograms-react": "^11.20.0",
     "@loadable/component": "^5.15.0",
     "@slack/web-api": "^5.11.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-gatsby": "^1.14.0",
-    "carbon-components": "^10.47.1",
-    "carbon-components-react": "^7.47.2",
+    "carbon-components": "^10.48.0-rc.0",
+    "carbon-components-react": "^7.48.0-rc.0",
     "change-case": "^4.1.1",
     "classnames": "^2.2.6",
     "codesandbox": "^2.1.10",
