chore(ci): add ci workflow action

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "serve": "gatsby serve",
     "lint:js": "eslint . --fix",
     "format": "prettier --write 'src/**/*.{css,scss,json,html,yaml,md,mdx}'",
+    "format:check": "prettier --check 'src/**/*.{css,scss,json,html,yaml,md,mdx}'",
     "update-browserslist": "npx browserslist-ga"
   },
   "engines": {
