chore(release): smoke test for v10.49.0-rc.0

--- a/package.json
+++ b/package.json
@@ -39,17 +39,17 @@
   "dependencies": {
     "@babel/core": "^7.15.8",
     "@carbon/charts-react": "0.50.8",
-    "@carbon/elements": "^10.46.0",
-    "@carbon/icons": "^10.42.0",
-    "@carbon/icons-react": "^10.42.0",
+    "@carbon/elements": "^10.48.0-rc.0",
+    "@carbon/icons": "^10.44.0-rc.0",
+    "@carbon/icons-react": "^10.44.0-rc.0",
     "@carbon/pictograms": "^11.20.0",
     "@carbon/pictograms-react": "^11.20.0",
     "@loadable/component": "^5.15.0",
     "@slack/web-api": "^5.11.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-gatsby": "^1.14.0",
-    "carbon-components": "^10.47.1",
-    "carbon-components-react": "^7.47.2",
+    "carbon-components": "^10.49.0-rc.0",
+    "carbon-components-react": "^7.49.0-rc.0",
     "change-case": "^4.1.1",
     "classnames": "^2.2.6",
     "codesandbox": "^2.1.10",
@@ -81,7 +81,7 @@
     "d3": "7.0.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.32.0",
-    "eslint-config-carbon": "^2.8.0",
+    "eslint-config-carbon": "^2.9.0-rc.0",
     "fs-extra": "^9.0.1",
     "gatsby-plugin-lodash": "^4.14.0",
     "gatsby-plugin-manifest": "^3.14.0",
