changes for progress bar

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -148,6 +148,8 @@
       path: /components/pagination/usage/
     - title: Popover
       path: /components/popover/usage/
+    - title: Progress bar
+      path: /components/progress-bar/usage/
     - title: Progress indicator
       path: /components/progress-indicator/usage/
     - title: Radio button
