--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "codesandbox": "^2.1.10",
     "copy-to-clipboard": "^3.2.1",
     "fuse.js": "^6.4.1",
-    "gatsby": "^3.14.3",
-    "gatsby-image": "^3.7.1",
-    "gatsby-plugin-image": "^1.14.1",
-    "gatsby-theme-carbon": "^2.1.6",
+    "gatsby": "^4.4.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-image": "^2.4.0",
+    "gatsby-theme-carbon": "^3.0.0-next.1",
     "lodash-es": "^4.17.15",
     "markdown-it": "^9.0.1",
     "nanoid": "^2.1.11",
@@ -72,8 +72,8 @@
     "webpack": "^5.59.0"
   },
   "devDependencies": {
-    "@loadable/babel-plugin": "^5.12.0",
-    "@loadable/webpack-plugin": "^5.15.0",
+    "@loadable/babel-plugin": "^5.13.2",
+    "@loadable/webpack-plugin": "^5.15.2",
     "@now/node": "^1.6.1",
     "@philpl/buble": "^0.19.7",
     "babel-eslint": "^10.1.0",
@@ -83,15 +83,15 @@
     "eslint": "^7.32.0",
     "eslint-config-carbon": "^2.8.0",
     "fs-extra": "^9.0.1",
-    "gatsby-plugin-lodash": "^4.14.0",
-    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-lodash": "^5.4.0",
+    "gatsby-plugin-manifest": "^4.4.0",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-sharp": "^3.14.1",
-    "gatsby-plugin-sitemap": "^4.10.0",
-    "gatsby-remark-images": "^5.11.0",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-transformer-sharp": "^3.14.0",
-    "html-loader": "^2.1.2",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-plugin-sitemap": "^5.4.0",
+    "gatsby-remark-images": "^6.4.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-sharp": "^4.4.0",
+    "html-loader": "^3.1.0",
     "husky": "^4.2.3",
     "lint-staged": ">=10.0.9",
     "markdown-loader": "^6.0.0",
