--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
     "codesandbox": "^2.1.10",
     "copy-to-clipboard": "^3.2.1",
     "fuse.js": "^6.4.1",
-    "gatsby": "^4.9.1",
+    "gatsby": "^4.4.0",
     "gatsby-image": "^3.7.1",
     "gatsby-plugin-image": "^2.9.0",
-    "gatsby-theme-carbon": "^3.0.0-next.2",
+    "gatsby-theme-carbon": "^3.0.0-next.3",
     "lodash-es": "^4.17.15",
     "markdown-it": "^9.0.1",
     "nanoid": "^2.1.11",
@@ -109,5 +109,8 @@
     "*.{css,scss,json,html,yaml,md,mdx}": [
       "prettier --write"
     ]
+  },
+  "resolutions": {
+    "webpack": "^5.59.0"
   }
 }
