--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@carbon/elements": "^10.55.0",
     "@carbon/pictograms": "^11.24.0",
     "@carbon/pictograms-react": "^11.25.0",
+    "@carbon/react": "^0.17.0",
     "@loadable/component": "^5.15.2",
     "@slack/web-api": "^5.11.0",
     "babel-preset-env": "^1.7.0",
