chore(project): final v11 updates

--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
   "dependencies": {
     "@babel/core": "^7.15.8",
     "@carbon/charts-react": "0.55.0",
-    "@carbon/elements": "^11.0.0-rc.0",
-    "@carbon/pictograms": "^12.0.0-rc.0",
-    "@carbon/pictograms-react": "^11.26.0-rc.0",
-    "@carbon/react": "^1.0.0-rc.0",
+    "@carbon/elements": "^11.0.0",
+    "@carbon/icons-react": "^11.0.0",
+    "@carbon/pictograms": "^12.0.0",
+    "@carbon/pictograms-react": "^11.26.0",
+    "@carbon/react": "^1.0.0",
     "@loadable/component": "^5.15.2",
     "@slack/web-api": "^5.11.0",
     "babel-preset-env": "^1.7.0",
@@ -56,7 +57,7 @@
     "gatsby": "^4.9.2",
     "gatsby-image": "^3.7.1",
     "gatsby-plugin-image": "^2.9.0",
-    "gatsby-theme-carbon": "^3.0.0-next.8",
+    "gatsby-theme-carbon": "^3.0.0-next.9",
     "lodash-es": "^4.17.15",
     "markdown-it": "^12.3.2",
     "nanoid": "^2.1.11",
