chore: add redirects

--- a/conf.d/rewrite.conf
+++ b/conf.d/rewrite.conf
@@ -44,3 +44,7 @@ rewrite /tutorial/vue/(.*) /developing/vue-tutorial/\$1 permanent;
 # Data-visualization
 rewrite /data-visualization/basic-charts/ /data-visualization/simple-charts/ permanent;
 rewrite /data-visualization/advanced-charts/ /data-visualization/complex-charts/ permanent;
+
+#v11
+rewrite https://v11.carbondesignsystem.com/migrating/guide/\$1 /migrating/guide/\$1 permanent;
+rewrite /whats-happening/v11-release /migrating/guide/\$1 permanent;
